5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1800_2570.log
== TEST (2019-06-11 17:55:19) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
for i in range(x):
	soma = soma + x[i] - m
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:56:03) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
for i in range(size(x)):
	soma = soma + x[i] - m
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:59:41) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
x1 = (soma) ** 1/n
print(x1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:00:03) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
x1 = (soma) ** 1/n
print(round(x1, 3)
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:00:09) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
x1 = (soma) ** 1/n
print(round(x1, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:00:28) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
x1 = (soma) ** (1/n)
print(round(x1, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:01:58) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
p = (soma) ** (1/n)
print(round(p, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:02:30) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 0
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
p = (soma) ** (1/n)
print(round(p, 3))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:03:20) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 1
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
p = (soma) ** (1/n)
print(round(p, 3))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:03:37) 
-- CODE:
from numpy import *
x = array(eval(input("Vetor de numeros reais: ")))
soma = 1
m = sum(x) / size(x)
n = size(x)
for i in range(size(x)):
	soma = soma * abs(x[i] - m)
p = (soma) ** (1/n)
print(round(p, 3))
-- EXECUTION TIME:
0.910096
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
